src/patternlibrary/scss/base.scss
@import "./elements/links";
@import "./elements/headers";

:global {
  //Set for rem font sizes.
  html {
    font-size: 80%;
  }

  body {
    color: #000;
    margin: 0;
    min-width: 320px;
    padding: 0;
    position: relative;
    visibility: visible;
  }

  //Remove focus outline on selected item.
  div {
    outline: 0;
  }

  .base-footnote {
    font-family: $font-family;
    font-size: $font-size-footnote;
    color: $color-footnote-foreground;
  }

  .base-refresh {
    bottom: 0px;
    position: fixed;
    z-index: 999;
    display: none;
    background: white;
    border-radius: 200vh;
    top: -50%;
    right: -50%;
  }
}

